fixing height on mobile view

--- a/src/Components/Cards.css
+++ b/src/Components/Cards.css
@@ -104,7 +104,7 @@ h1 {
 
 @media only screen and (min-width: 1200px) {
   .content__blog__container {
-    width: 84%;
+    width: 100%;
   }
 }
 
